--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "styled-components": "^2.2.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node server.js",
+    "start-react": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "start-server": "node server.js"
+    "eject": "react-scripts eject"
   }
 }
