--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "express": "^4.16.2",
+    "flow-bin": "^0.59.0",
     "lodash": "^4.17.4",
     "normalize.css": "^7.0.0",
     "pitchfork": "^0.0.14",
@@ -18,6 +19,7 @@
     "start-react": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "flow": "flow"
   }
 }
