--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-scripts": "1.0.14",
+    "react-transition-group": "^2.2.1",
     "request": "^2.83.0",
     "styled-components": "^2.2.2"
   },
