--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
     "bluebird": "^3.5.1",
     "express": "^4.16.2",
     "lodash": "^4.17.4",
-    "pitchfork": "^0.0.15",
+    "@giuband/pitchfork": "^0.1.0",
     "redis": "^2.8.0",
     "request": "^2.83.0"
   },
